basic-layout.html added

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title> WDD 131 | OLUWAYEMI ONI | HTML Form - Basic layout </title>
     <link rel="stylesheet" href="styles/layout.css">
   </head>
   <body>
     <header>
-        <h1>WDD 131 | OLUWAYEMI ONI | HTML Form - Basic layout</h1>
+    <main>
+        <nav>
+            <a href = "#">Home</a>
+            <a href = "wwr/">Rafting Website</a>
+            <a href = "https://web.facebook.com/yemi.oni.589">Facebook Page</a>
+            <a href = " https://linkedin.com "> Linkedin</a>
+        </nav>
+    </main>
     </header>
+    <footer>
+        <p>©2025  🌴 Oluwayemi Oni  🌴  Nigeria</p>
+    </footer>
   </body>
   </html>
