index.html added

--- a/week01/index.html
+++ b/week01/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> WDD 131 - Dynamic Web Fundamentals - Oluwayemi Oni </title> 
     <link rel="stylesheet" href="styles/base.css">
-    <script src="scripts/getdates.js" defer></script>
-    <meta name="description" content="WDD 131 :Dynamic Web Fundamentals | Oluwayemi Oni | Web Development Course">
+    <meta name="description" content= "This is a little description of my home page which was designed by Oluwayemi Oni, studying Web and Computer Programming at BYU-Idaho and the purpose of this page is for end users to make search of anything of their choice and to know little about the developer">
     <meta name="author" content="Oluwayemi Oni">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="scripts/getdates.js" defer></script>
   </head>
   <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals- Oluwayemi Oni</h1>
-    </header>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Oluwayemi Oni</h1>
         <nav>
             <a href="https://www.linkedin.com">LinkedIn</a>
             <a href="https://byupw.instructure.com/">Canvas</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
             <a href="#">Final Project</a> 
         </nav>
+    </header>
     <main>
     <section class=" container">
         <div class="card">
@@ -54,7 +54,7 @@
     <footer>
         <p>©<span id="copyright-year"></span> 🌸 Oluwayemi Oni🌸 Nigeria</p>
         <p>Current Modification: <span id="last-modified"></span></p>
-        <p>Last last-modified: 01/09/2025 12:13:33</p>
+        <p>Last-modified: 01/09/2025 12:13:33</p>
     </footer>
   </body>
 </html>
