--- a/week02/bom.html
+++ b/week02/bom.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstati.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/bom.css">
-        <script src="scripts/bom.js"></script>
+        <script src="scripts/bom.js" defer></script>
     </head>
     <body>
         <header>
