index.html added

--- a/week01/index.html
+++ b/week01/index.html
@@ -53,8 +53,7 @@
     </main>
     <footer>
         <p>©<span id="copyright-year"></span> 🌸 Oluwayemi Oni🌸 Nigeria</p>
-        <p>Current Modification: <span id="last-modified"></span></p>
-        <p>Last-modified: 01/09/2025 12:13:33</p>
+        <p>Last Modification: <span id="last-modified"></span></p>
     </footer>
   </body>
 </html>
