temples.html added

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -39,7 +39,7 @@
                     <img src="images/aba.jpg" alt="Aba Temple - Abia State, Nigeria">
                     <figcaption>Aba Temple - Abia State, Nigeria</figcaption>
                 </figure>
-                <figure>
+                <figure></figure>
                     <img src="images/aba.jpg" alt="Aba Temple - Abia State, Nigeria">
                     <figcaption>Aba Temple - Abia State, Nigeria</figcaption>
                 </figure>
