temples.html added

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Temple Album</title>
+        <meta name="description" content= "This is a little description of an app that allows users to view the picture album page that is responsive in small and larger views.">
         <meta name="author" content="Oluwayemi Oni">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstati.com" crossorigin>
@@ -26,7 +27,7 @@
         </header>
         <main>
             <h2>Home</h2>
-            <section class="temple-grid">
+            <div class="temple-grid">
                 <figure>
                     <img src="images/aba.jpg" alt="Aba Temple - Abia State, Nigeria">
                     <figcaption>Aba Temple - Abia State, Nigeria</figcaption>
@@ -63,7 +64,7 @@
                     <img src="images/aba.jpg" alt="Aba Temple - Abia State, Nigeria">
                     <figcaption>Aba Temple - Abia State, Nigeria</figcaption>
                 </figure>
-            </section>
+            </div>
         </main>
         <footer>
             <p>&copy; <span id="year"></span> 🌸 Oluwayemi Oni 🌸 Nigeria</p>
@@ -71,3 +72,4 @@
         </footer>
     </body>
 </html>
+
