--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Page</title>
-    <meta name="description"content="Build an HTML form with a confirmation page">
+    <meta name="description" content="Build an HTML form with a confirmation page">
     <meta name="author" content="Oluwayemi Oni">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,24 +28,24 @@
       <!-- Overall Rating -->
       <fieldset>
         <legend>Overall Rating</legend>
-        <label><input type="radio" name="rating" value="1" required /> ★</label>
-        <label><input type="radio" name="rating" value="2" /> ★★</label>
-        <label><input type="radio" name="rating" value="3" /> ★★★</label>
-        <label><input type="radio" name="rating" value="4" /> ★★★★</label>
-        <label><input type="radio" name="rating" value="5" /> ★★★★★</label>
+        <label><input type="radio" name="rating" value="1" required> ★</label>
+        <label><input type="radio" name="rating" value="2" > ★★</label>
+        <label><input type="radio" name="rating" value="3" > ★★★</label>
+        <label><input type="radio" name="rating" value="4" > ★★★★</label>
+        <label><input type="radio" name="rating" value="5" > ★★★★★</label>
       </fieldset>
 
       <!-- Date of Installation -->
       <label for="installDate">Date of Installation</label>
-      <input type="date" id="installDate" name="installDate" required />
+      <input type="date" id="installDate" name="installDate" required >
 
       <!-- Useful Features -->
       <fieldset>
         <legend>Which features did you find useful in the product?<br><em>(Check all that apply)</em></legend>
-        <label><input type="checkbox" id="durability" name="features" value="Durability" /> Durability</label>
-        <label><input type="checkbox" id="ease" name="features" value="Ease of Use" /> Ease of Use</label>
-        <label><input type="checkbox" id="performance" name="features" value="Performance" /> Performance</label>
-        <label><input type="checkbox" id="design" name="features" value="Design" /> Design</label>
+        <label><input type="checkbox" id="durability" name="features" value="Durability"> Durability</label>
+        <label><input type="checkbox" id="ease" name="features" value="Ease of Use"> Ease of Use</label>
+        <label><input type="checkbox" id="performance" name="features" value="Performance"> Performance</label>
+        <label><input type="checkbox" id="design" name="features" value="Design"> Design</label>
       </fieldset>
 
       <!-- Written Review -->
@@ -54,10 +54,10 @@
 
       <!-- Name -->
       <label for="username">Your Name <span>(Optional)</span></label>
-      <input type="text" id="username" name="username" />
+      <input type="text" id="username" name="username">
 
       <!-- Submit -->
-      <input type="submit" value="Post Review" />
+      <input type="submit" value="Post Review">
     </form>
     <section id="confirmationMessage">
         <p><strong>Your review has been submitted successfully.</strong></p>
