--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/ybuk-logo.webp" alt="Ybuk Logo" width="100" />
+      <img src="images/ybuk-logo.webp" alt="Ybuk Logo" width="100">
       <figure>Ybuk Solutions</figure> 
     </div>
     <nav>
@@ -46,9 +46,8 @@
       <h2>Latest News</h2>
       <ul id="news-list"></ul>
     </section>
-    <section>
       <div class="image-container">
-        <img src="images/garden.webp" alt="Community Garden" />
+        <img src="images/garden.webp" alt="Community Garden">
         <div class="testimonial-overlay">
           <p class="testimonial-text">
             Our SeedMoney campaign was the least resource intensive fundraiser we have ever conducted  
@@ -59,7 +58,6 @@
           </p>
         </div>
       </div>
-    </section>
   </main>
   <footer class = "footer">
     <div class="footer-container">
