join.html added

--- a/project/join.html
+++ b/project/join.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/ybuk-logo.webp" alt="Ybuk Logo" width="100" />
+            <img src="images/ybuk-logo.webp" alt="Ybuk Logo" width="100" >
             <figure>Ybuk Solutions</figure> 
           </div>
           <nav>
